# emufe

./: AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
sdlallegro/: ChangeLog  Makefile  Makefile.am  Makefile.in  sa_joystick.c  sa_pcx.c  sa_prims.c  sa_sdlimage.c  sdl_allegro.c  sdl_allegro.h
sdlallegro/.deps/: sa_joystick.Po  sa_prims.Po  sa_sdlimage.Po  sa_timer.Po  sdl_allegro.Po
share/emufe/: emucd.env  emufe.rc  emufe.rc2  index.menu  theme1024.rc
share/emufe/desc/: dkong.desc  stdisk.desc
share/emufe/etc/: theme.rc
share/emufe/fonts/: cyrsun.fnt  shadow.fnt  silkfont.fnt
share/emufe/pics/: banner.pcx  bg_sshot1.pcx  bg_sshot2.pcx  boxscn1024.pcx  bx_dkong.pcx  bx_stdisk.pcx  bx_u4.pcx  bx_wc.pcx  descbox.pcx  descbox1024.pcx  emubk.pcx  emubk1024.pcx  emusplash.pcx  exit_bu.pcx  exit_hl.pcx  exit_pr.pcx  launch_bu.pcx  launch_hl.pcx  launch_pr.pcx  menubox.pcx  menubox2.pcx  picbox.pcx  s1_dkong.pcx  s1_stdisk.pcx  s2_dkong.pcx  s2_stdisk.pcx  s3_dkong.pcx  stdisk.pcx  test.pcx
share/emufe/set-up/: Amiga.def  ST.def  a2600.def  a5200.def  a800.def  arcade.def  c64.def  end.def  genesis.def  intv.def  jaguar.def  lynx.def  main.def  mess.def  start.def
share/emufe/test-bed/: index.menu
share/emufe/test-bed/2600/: index.menu
share/emufe/test-bed/5200/: index.menu
share/emufe/test-bed/7800/: index.menu
share/emufe/test-bed/8bit/: index.menu
share/emufe/test-bed/Arcade/: index.menu
share/emufe/test-bed/Lynx/: index.menu
share/emufe/test-bed/ST/: index.menu
share/emufe/test-bed/setup/: emufe.menu  index.menu  tempdir.menu
src/: Makefile  Makefile.am  Makefile.in  config.c  dfilepath.c  dfilepath.h  emufe.c  emufe.h  fileio.c  fileio.h  grid.c  menu.c  modules.c  modules.h  rcfile.c  rcfile.h  runme2.sh  setup.c  splash.c  test.c
src/.deps/: ai.Po  dfilepath.Po  dict.Po  emufe.Po  fileio.Po  gfx.Po  gmlogic.Po  hiscore.Po  main.Po  menu.Po  modules.Po  platform.Po  rcfile.Po  setup.Po  splash.Po
utils/: runme.sh
widget/: Makefile  Makefile.am  Makefile.in  button.c  button.h  dialog-str.c  dialog.c  dialog.h  font-ttf.c  font.c  font.h  font_legacy.c  font_legacy.h  input.c  style.c  widget.c  widget.h  window.c
widget/.deps/: button.Po  dialog-str.Po  dialog.Po  font-ttf.Po  font.Po  font_legacy.Po  input.Po  keyboard.Po  style.Po  widget.Po  window.Po
